--- a/index.html
+++ b/index.html
@@ -3,13 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>anuńcio publicitário</title>
+    <title>Anuńcio Publicitário</title>
 
 </head>
 <body>
- <h1> anúncio publicitário</h1>   
+ <h1> Anúncio Publicitário</h1>   
 
  <br>
- <img scr="foto1.png" alt="foto da publicidade"
+ <img scr="foto1.png" alt="foto da publicidade">
+ <br>
+
+ <p>Explique o que</p>
 </body>
 </html>
