--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
  <h1> Anúncio Publicitário</h1>   
 
  <br>
- <img scr="foto1.png" alt="foto da publicidade">
+ <img src="foto1.png" alt="foto da publicidade">
  <br>
 
  <p>Explique o que</p>
