--- a/index.html
+++ b/index.html
@@ -13,6 +13,16 @@
  <img src="foto1.png" alt="foto da publicidade">
  <br>
 
- <p>Explique o que</p>
+ <p>O anúncio publicitário visa apresentar, ao grande público, determinado produto, marca ou serviço, com o intuito de atrair e convencer os consumidores a adquirirem ou aderirem ao que está sendo apresentado. A linguagem desse gênero é mista, mesclando elementos verbais com não verbais. Para construir um bom anúncio, é preciso estar atento, além de ter em mente, de modo objetivo, o que está sendo apresentado. A forma de apresentação pode variar a depender da necessidade da marca."</p>
+
+ <h2>Características do Anúncio Publicitário</h2>
+ <p>As principal característica do Anúncio Publicitário são:</p>
+
+ <ul>
+    <li>Linguagem simples</li>
+    <li>Humor</li>
+    <li>Criatividade</li>
+ </ul>
+ 
 </body>
 </html>
